<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_title">Вход</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="dont_have_an_account">Нету аккаунта?</string>
    <string name="register">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="vk">VK</string>
</resources>