<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark"
    android:gravity="center">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textFontWeight="400"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:paddingBottom="8dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textFontWeight="400"
        android:imeOptions="actionNext"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:paddingBottom="8dp"  />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textFontWeight="400"
        android:imeOptions="actionDone"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/green"
        app:backgroundTint="@null"
        app:rippleColor="@android:color/transparent"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textFontWeight="400"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textFontWeight="600"
            android:layout_marginRight="6dp"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:textFontWeight="600"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:textFontWeight="600"
        android:clickable="true"
        android:focusable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        android:layout_marginVertical="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnVK"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_shape"
                android:backgroundTint="@color/vk"
                app:backgroundTint="@null"
                app:rippleColor="@android:color/transparent"
                android:layout_marginEnd="12dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vk"
                android:src="@drawable/vk_logo"
                android:scaleType="center"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_shape_ok"
                app:backgroundTint="@null"
                app:rippleColor="@android:color/transparent"
                android:layout_marginStart="12dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vk"
                android:src="@drawable/ok_logo"
                android:scaleType="center"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center"
                />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>